[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/default_font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/icons/mask_shader.tres" type="Material" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scenes/additional/player_cloud_card.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_left = -0.00104755
anchor_top = -0.00607849
anchor_right = -0.00104755
anchor_bottom = -0.00607849
margin_left = 1.07269
margin_top = 3.64709
margin_right = 1.07269
margin_bottom = 3.64709
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ControlSize" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -71.0
margin_right = 39.0
margin_bottom = 21.0
rect_min_size = Vector2( 73, 92 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Icon" type="TextureRect" parent="ControlSize"]
material = ExtResource( 2 )
anchor_left = 0.499
anchor_top = -0.021
anchor_right = 0.499
anchor_bottom = 0.725702
margin_left = -36.2603
margin_top = -0.00615454
margin_right = 36.2336
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labConnected" type="Label" parent="ControlSize"]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.741986
anchor_top = 0.439356
anchor_right = 1.11185
anchor_bottom = 0.776313
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "C!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NickLabel" type="Label" parent="ControlSize"]
anchor_left = -0.428218
anchor_top = 0.758643
anchor_right = 1.3663
anchor_bottom = 1.06299
margin_right = 7.62939e-06
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.411765, 0.411765, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": true
}
